Actually commit the changes. Whoops.

--- a/README
+++ b/README
@@ -1,2 +1,5 @@
 WARNING: This package is *very* unstable. Treat as a proof of concept only; the
 APIs are likely to completely change.
+
+Documentation is available at:
+  https://godoc.org/github.com/google/godata
